--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ buildNumber.properties
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 temp
-codelijst-secundairestructuurtype.iml
+codelijst-sedimentairestructuurtype.iml
 src/.env
 src/utils/setenv.js
+node_modules/
